--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,5 +1,31 @@
-@lib: blue;
+/* 
+font-family: 'latobold';
+font-family: 'latoitalic';
+font-family: 'lato_lightregular';
+font-family: 'latoregular';
+*/
+
 * {
   margin: 0;
   padding: 0;
+}
+.container {
+  max-width: 1150px;
+  width: 100%;
+  margin: 0 auto;
+}
+.block_head{
+    background: url(../images/Layer-7.jpg) no-repeat;
+    width: 100%;
+    height: 800px;
+}
+.info_block1{
+    padding: 115px 0 140px 0;
+}
+.content{
+    text-align: center;
+    font-family: 'latobold';
+}
+.icon{
+    margin-bottom: 31px;
 }
