--- a/app/less/main.less
+++ b/app/less/main.less
@@ -4,28 +4,98 @@ font-family: 'latoitalic';
 font-family: 'lato_lightregular';
 font-family: 'latoregular';
 */
+@lb: 'latobold';
+@lreg: 'latoregular';
+@ptxt: #8c8e90;
+@h2: #353738;
 
 * {
   margin: 0;
   padding: 0;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
+.wrapper{
+      position: relative;
+      min-height: 100%;
+}
 .container {
-  max-width: 1150px;
+  max-width: 1580px;
   width: 100%;
   margin: 0 auto;
 }
 .block_head{
     background: url(../images/Layer-7.jpg) no-repeat;
+    background-size: cover;
     width: 100%;
     height: 800px;
 }
-.info_block1{
+.info_block{
     padding: 115px 0 140px 0;
-}
 .content{
     text-align: center;
-    font-family: 'latobold';
-}
-.icon{
-    margin-bottom: 31px;
+    width: 1080px;
+    margin: 0 auto;
+    }
+    .h2{
+        font-family: @lb;
+        font-size: 18px;
+        color: @h2;
+        
+    }
+    .paragraph{
+        font-family: @lreg;
+        margin-top: 30px;
+        color: @ptxt;
+        font-size: 18px;
+    }
+    .icon{
+        margin-bottom: 31px;
+    }
+        }
+
+
+
+.content_block1{
+    .container{
+        max-width: 1580px;
+        padding: 0;
+        
+        .row{
+        display: flex;
+        flex-direction: row;
+        }
+    }
+    .box1{
+        flex: 3;
+    }
+    .box2{
+        flex: 2;
+        
+        .mincontent{
+            padding: 70px;
+            text-align: center;
+        
+            .h2{
+                font-family: @lb;
+                font-size: 18px;
+                color: @h2;
+                text-transform: uppercase;
+        
+        }
+            .paragraph{
+                font-family: @lreg;
+                color: @ptxt;
+                font-size: 18px;
+                text-align: justify;
+        }
+            .icon{
+                margin-bottom: 24px;
+        }
+    }
+    }
+
 }
