--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8,23 +8,77 @@ font-family: 'latoregular';
   margin: 0;
   padding: 0;
 }
+html,
+body {
+  overflow-x: hidden;
+}
+.wrapper {
+  position: relative;
+  min-height: 100%;
+}
 .container {
-  max-width: 1150px;
+  max-width: 1580px;
   width: 100%;
   margin: 0 auto;
 }
 .block_head {
   background: url(../images/Layer-7.jpg) no-repeat;
+  background-size: cover;
   width: 100%;
   height: 800px;
 }
-.info_block1 {
+.info_block {
   padding: 115px 0 140px 0;
 }
-.content {
+.info_block .content {
   text-align: center;
-  font-family: 'latobold';
+  width: 1080px;
+  margin: 0 auto;
 }
-.icon {
+.info_block .h2 {
+  font-family: 'latobold';
+  font-size: 18px;
+  color: #353738;
+}
+.info_block .paragraph {
+  font-family: 'latoregular';
+  margin-top: 30px;
+  color: #8c8e90;
+  font-size: 18px;
+}
+.info_block .icon {
   margin-bottom: 31px;
+}
+.content_block1 .container {
+  max-width: 1580px;
+  padding: 0;
+}
+.content_block1 .container .row {
+  display: flex;
+  flex-direction: row;
+}
+.content_block1 .box1 {
+  flex: 3;
+}
+.content_block1 .box2 {
+  flex: 2;
+}
+.content_block1 .box2 .mincontent {
+  padding: 70px;
+  text-align: center;
+}
+.content_block1 .box2 .mincontent .h2 {
+  font-family: 'latobold';
+  font-size: 18px;
+  color: #353738;
+  text-transform: uppercase;
+}
+.content_block1 .box2 .mincontent .paragraph {
+  font-family: 'latoregular';
+  color: #8c8e90;
+  font-size: 18px;
+  text-align: justify;
+}
+.content_block1 .box2 .mincontent .icon {
+  margin-bottom: 24px;
 }
