--- a/app/css/main.css
+++ b/app/css/main.css
@@ -11,6 +11,9 @@ font-family: 'latoregular';
 html,
 body {
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 .wrapper {
   position: relative;
@@ -27,26 +30,31 @@ body {
   width: 100%;
   height: 800px;
 }
-.info_block {
+.info_block,
+.info_block3 {
   padding: 115px 0 140px 0;
 }
-.info_block .content {
+.info_block .content,
+.info_block3 .content {
   text-align: center;
   width: 1080px;
   margin: 0 auto;
 }
-.info_block .h2 {
+.info_block .h2,
+.info_block3 .h2 {
   font-family: 'latobold';
   font-size: 18px;
   color: #353738;
 }
-.info_block .paragraph {
+.info_block .paragraph,
+.info_block3 .paragraph {
   font-family: 'latoregular';
   margin-top: 30px;
   color: #8c8e90;
   font-size: 18px;
 }
-.info_block .icon {
+.info_block .icon,
+.info_block3 .icon {
   margin-bottom: 31px;
 }
 .content_block1 .container {
@@ -144,4 +152,80 @@ body {
   font-size: 14px;
   font-family: 'latobold';
   letter-spacing: 3px;
+}
+.info_block3 h3 {
+  color: #848789;
+  font-family: 'latoitalic';
+  padding: 33px 0;
+  font-size: 24px;
+}
+.info_block3 .form ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.info_block3 .li_email {
+  width: 400px;
+  height: 66px;
+  padding: 23px;
+  border: 1px solid #d3d7d9;
+}
+.info_block3 .li_email:focus {
+  outline: 1px solid #64c29e;
+}
+.info_block3 .li_buttom {
+  font-family: 'lato_lightregular';
+  color: #fff;
+  background: #64c29e;
+  padding: 0 35px;
+  height: 66px;
+  font-size: 21px;
+  border: none;
+}
+.info_block3 .li_buttom:hover {
+  background: #fff;
+  color: #64c29e;
+  outline: 1px solid #64c29e;
+}
+.clear {
+  padding-bottom: 250px;
+}
+.footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: #f7f7f7;
+  height: 250px;
+  padding: 100px 0;
+}
+.footer .b-box {
+  text-align: center;
+}
+.footer .b-box .links {
+  margin-left: 15px;
+}
+.footer .b-box .links .vector {
+  margin-top: 10px;
+}
+.footer .text {
+  text-align: left;
+}
+.footer .text h5 {
+  font-size: 16px;
+  font-family: 'latobold';
+  color: #8c8e90;
+}
+.footer .text p {
+  margin: 0;
+  font-family: 'latoitalic';
+  font-size: 14px;
+  color: #8c8e90;
+}
+.footer .one_p {
+  display: inline;
+  margin-right: 10px;
+  font-family: 'latoitalic';
+  font-size: 14px;
+  color: #8c8e90;
 }
