--- a/app/less/main.less
+++ b/app/less/main.less
@@ -26,9 +26,8 @@ body {
       position: relative;
       min-height: 100%;
 }
-.container {
-  max-width: 1580px;
-  width: 100%;
+.all-container {
+  max-width: 1150px;
   margin: 0 auto;
 }
 .block_head{
@@ -61,90 +60,70 @@ body {
     }
         }
 
+// GALLERY BLOCK
 
-
-.content_block1{
-    .container{
-        max-width: 1580px;
+.grid-block1 {
+        display: grid;
+        width: 1580px;
+        grid-template-columns: 1fr 516px 516px;
+        grid-template-rows: 599px 599px 599px;
+        margin: 0 auto;
         padding: 0;
-        
-        .row, .row2, .row3{
-            display: flex;
-            flex-direction: row;
-            padding: 0;
-            margin: 0;
-        
-        }
-        .row2{
-            flex-direction: row-reverse;
-        }
+    border: 1px solid red;
+    .fon{
+        width: 100%;
+        height: 100%;
     }
-    .box1,{
-        flex: 1;
-        position: relative;
-        
-        .icon_logo{
+        .fon1{
+        width: 100%;
+        height: 100%;
             position: absolute;
-            z-index: 1;
-            top: 40%;
-            left: 45%;
-        }
+            left: 0;
+            bottom: 0;
     }
-    .box2{
-        flex: 1;
-        
-        .mincontent:after{
-                content: '';
-                position: absolute;
-                background: @after;
-                width: 50px;
-                height: 1px;
-                left: 45%;
-                
-            }
-        .mincontent{
-            padding: 66px 66px 0;
-            text-align: center;
-            position: relative;
-        
-            .h2{
-                font-family: @lb;
-                font-size: 18px;
-                color: @h2;
-                text-transform: uppercase;
-        
-        }
-            .paragraph{
-                font-family: @lreg;
-                color: @ptxt;
-                font-size: 16px;
-                text-align: justify;
-                padding-bottom: 40px;
-                
-        }
-            .icon{
-                margin-bottom: 24px;
-        }
+    
     }
+     .item1{
+        grid-column: span 2;
     }
-    .box-2{
-        flex: 1;
+    .item4{
+        grid-column: span 2;
     }
-    .box-3{
-        flex: 1;
+.min_content{
+    padding: 25px 0;
+    text-align: center;
+    position: relative;
+    .icon{
+        padding-bottom: 28px;
     }
-    .box-1{
-        flex: 1;
+    .min_h3{
+        font-size: 18px;
+        color: @h2;
+        text-transform: uppercase;
+        font-family: 'latobold';
+        letter-spacing: 2px;
+    }
+    p{
+        text-align: justify;
+        font-size: 16px;
+        font-family: 'latoregular';
+        color: @ptxt;
         position: relative;
-        .icon_logo{
-            position: absolute;
-            z-index: 1;
-            top: 45%;
-            left: 30%;
-        }
+        padding: 26px 0 40px 0;
+    }
+    p::after{
+        content: '';
+        position: absolute;
+        left: 45%;
+        bottom: 0;
+        width: 50px;
+        height: 1px;
+        background: #d7d7d7;
+    }
 
 }
-}
+// END GALERY BLOCK
+
 .block_buttom{
     background: #282f35;
     padding: 75px;
@@ -169,6 +148,81 @@ body {
         letter-spacing: 3px;
     }
 }
+
+// GALLERY BLOCK
+
+.gallery_2{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 270px);
+    .item_1{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+    .item_2{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+     .item_3{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+    .item_4{
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 3;
+    }
+    .item_5{
+        grid-column-start: 4;
+        grid-column-end: 5;
+        grid-row-start: 1;
+        grid-row-end: 3;
+    }
+    .item_6{
+        grid-column-start: 5;
+        grid-column-end: 7;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+      .item_7{
+        grid-column-start: 5;
+        grid-column-end: 6;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+      .item_8{
+        grid-column-start: 6;
+        grid-column-end: 7;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+    .gallery_img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+// END GALERY BLOCK
+
 .info_block3{
     h3{
         color: #848789;
@@ -210,6 +264,8 @@ body {
 .clear{
     padding-bottom: 250px;
 }
+
+// FOOTER //
 
 .footer{
     position: absolute;
