--- a/app/css/main.css
+++ b/app/css/main.css
@@ -56,63 +56,100 @@ body {
 .info_block3 .icon {
   margin-bottom: 31px;
 }
-.grid-block1 {
-  display: grid;
-  width: 1580px;
-  grid-template-columns: 1fr 516px 516px;
-  grid-template-rows: 599px 599px 599px;
+.gallery_1 {
+  max-width: 1580px;
   margin: 0 auto;
-  padding: 0;
-  border: 1px solid red;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 400px 200px 400px 200px 400px 200px;
 }
-.grid-block1 .fon {
+.gallery_1 .box1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+.gallery_1 .box2 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+.gallery_1 .box3 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+.gallery_1 .box4 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+.gallery_1 .box5 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+.gallery_1 .box6 {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+.gallery_1 .box7 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 5;
+  grid-row-end: 7;
+}
+.gallery_1 .box8 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 5;
+  grid-row-end: 6;
+}
+.gallery_1 .box9 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 6;
+  grid-row-end: 7;
+}
+.gallery_1 .box10 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 5;
+  grid-row-end: 7;
+}
+.gallery_1 .img_gallery1 {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
-.grid-block1 .fon1 {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-.item1 {
-  grid-column: span 2;
-}
-.item4 {
-  grid-column: span 2;
-}
-.min_content {
-  padding: 25px 0;
+.gallery_1 .box2,
+.gallery_1 .box4,
+.gallery_1 .box8 {
+  padding: 59px;
   text-align: center;
-  position: relative;
 }
-.min_content .icon {
-  padding-bottom: 28px;
-}
-.min_content .min_h3 {
+.gallery_1 .box2 h4,
+.gallery_1 .box4 h4,
+.gallery_1 .box8 h4 {
+  text-transform: uppercase;
+  letter-spacing: 2px;
   font-size: 18px;
   color: #353738;
-  text-transform: uppercase;
   font-family: 'latobold';
-  letter-spacing: 2px;
+  padding-top: 28px;
 }
-.min_content p {
-  text-align: justify;
+.gallery_1 .box2 p,
+.gallery_1 .box4 p,
+.gallery_1 .box8 p {
   font-size: 16px;
-  font-family: 'latoregular';
-  color: #8c8e90;
-  position: relative;
-  padding: 26px 0 40px 0;
-}
-.min_content p::after {
-  content: '';
-  position: absolute;
-  left: 45%;
-  bottom: 0;
-  width: 50px;
-  height: 1px;
-  background: #d7d7d7;
+  color: #848789;
+  text-align: justify;
 }
 .block_buttom {
   background: #282f35;
@@ -139,6 +176,8 @@ body {
 }
 .gallery_2 {
   display: grid;
+  max-width: 1580px;
+  margin: 0 auto;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(2, 270px);
 }
