--- a/app/less/main.less
+++ b/app/less/main.less
@@ -62,66 +62,98 @@ body {
 
 // GALLERY BLOCK
 
-.grid-block1 {
-        display: grid;
-        width: 1580px;
-        grid-template-columns: 1fr 516px 516px;
-        grid-template-rows: 599px 599px 599px;
-        margin: 0 auto;
-        padding: 0;
-    border: 1px solid red;
-    .fon{
-        width: 100%;
-        height: 100%;
-    }
-        .fon1{
-        width: 100%;
-        height: 100%;
-            position: absolute;
-            left: 0;
-            bottom: 0;
-    }
+.gallery_1{
+    max-width: 1580px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns:  1fr 1fr 1fr;
+    grid-template-rows: 400px 200px 400px 200px 400px 200px;
     
+    .box1{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 3;
     }
-     .item1{
-        grid-column: span 2;
+    .box2{
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 2;
     }
-    .item4{
-        grid-column: span 2;
+    .box3{
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 2;
+        grid-row-end: 3;
     }
-.min_content{
-    padding: 25px 0;
-    text-align: center;
-    position: relative;
-    .icon{
-        padding-bottom: 28px;
+     .box4{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 3;
+        grid-row-end: 4;
     }
-    .min_h3{
-        font-size: 18px;
-        color: @h2;
-        text-transform: uppercase;
-        font-family: 'latobold';
-        letter-spacing: 2px;
-    }
-    p{
-        text-align: justify;
-        font-size: 16px;
-        font-family: 'latoregular';
-        color: @ptxt;
-        position: relative;
-        padding: 26px 0 40px 0;
-    }
-    p::after{
-        content: '';
-        position: absolute;
-        left: 45%;
-        bottom: 0;
-        width: 50px;
-        height: 1px;
-        background: #d7d7d7;
-    }
+    .box5{
 
-}
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 4;
+        grid-row-end: 5;
+    }
+    .box6{
+        grid-column-start: 2;
+        grid-column-end: 4;
+        grid-row-start: 3;
+        grid-row-end: 5;
+    }
+    .box7{
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 5;
+        grid-row-end: 7;
+    }
+    .box8{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 5;
+        grid-row-end: 6;
+    }
+    .box9{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 6;
+        grid-row-end: 7;
+    }
+    .box10{
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 5;
+        grid-row-end: 7;
+    }
+    .img_gallery1{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .box2, .box4, .box8{
+        padding: 59px;
+        text-align: center;
+        h4{
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-size: 18px;
+            color: @h2;
+            font-family: 'latobold';
+            padding-top: 28px;
+        }
+        p{
+            font-size: 16px;
+            color: #848789;
+            text-align: justify;
+        }
+    }
+    }
+     
 // END GALERY BLOCK
 
 .block_buttom{
@@ -153,6 +185,8 @@ body {
 
 .gallery_2{
     display: grid;
+    max-width: 1580px;
+    margin: 0 auto;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(2, 270px);
     .item_1{
@@ -210,7 +244,6 @@ body {
     }
     
 }
-
 
 
 
