--- a/app/less/main.less
+++ b/app/less/main.less
@@ -26,10 +26,40 @@ body {
       position: relative;
       min-height: 100%;
 }
-.all-container {
+.container {
   max-width: 1150px;
   margin: 0 auto;
 }
+
+//HEADER START
+.header{
+    position: absolute;
+    width: 100%;
+    padding-top: 30px;
+    .menu_nav{
+        display: flex;
+        align-items: center;
+        max-width: 630px;
+        justify-content: space-around;
+        margin: 0 auto;
+    }
+    a{
+      text-transform: uppercase;
+      text-decoration: none;
+      color: #4d4959;
+      font-family: 'latobold';
+      font-size: 13px;
+    }
+    a:hover{
+        text-decoration: none;
+        color: #64c29e;
+      }
+    .logo{
+        width: 100%;
+    }
+}
+//HEADER END
+
 .block_head{
     background: url(../images/Layer-7.jpg) no-repeat;
     background-size: cover;
@@ -135,9 +165,35 @@ body {
         height: 100%;
         object-fit: cover;
     }
+    .box1, .box6, .box7{
+        position: relative;
+    }
+    .logoinbox{
+        position: absolute;
+        left: 40%;
+        top: 45%;
+        z-index: 1;
+    }
+    .logoinbox2{
+        position: absolute;
+        left: 30%;
+        top: 45%;
+        z-index: 1;
+    }
     .box2, .box4, .box8{
         padding: 59px;
         text-align: center;
+    }
+    .box3, .box5, .box9{
+        position: relative;
+    }
+    .bg{
+        position: absolute;
+        top: 0;
+        left: 47%;
+        z-index: 1;
+    }
+
         h4{
             text-transform: uppercase;
             letter-spacing: 2px;
@@ -151,7 +207,6 @@ body {
             color: #848789;
             text-align: justify;
         }
-    }
     }
      
 // END GALERY BLOCK
@@ -242,17 +297,11 @@ body {
         height: 100%;
         object-fit: cover;
     }
-    
+    .a_gallery{
+        width: 100%;
+        height: 100%;
+    }
 }
-
-
-
-
-
-
-
-
-
 
 // END GALERY BLOCK
 
